infrastructure/k8s/3_mysql-deployment.yaml
# Deploys the MySQL database pod.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0 # Use an official image from DockerHub
          ports:
            - containerPort: 3306
          volumeMounts:
            # Mount the persistent volume to ensure data is not lost on pod restart
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
