infrastructure/k8s/5_backend-deployment.yaml
# Deploys the FastAPI backend application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-loader-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-loader
  template:
    metadata:
      labels:
        app: data-loader
    spec:
      containers:
        - name: data-loader-app
          image: moshezeiger/data-loader:1.2
          ports:
            - containerPort: 8080
