infrastructure/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-loader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-loader
  template:
    metadata:
      labels:
        app: data-loader
    spec:
      containers:
      - name: data-loader
        image: idanshan/data-loader-fastapi
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: data-loader
spec:
  ports:
  - port: 8000
  selector:
    app: data-loader
